Photo bug fixed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                 <a href="https://www.instagram.com/julianobaquico/">Instagram</a>
                 <a href="https://github.com/julianobaquico">Github</a>
             </section>
-            <img src="Group 3.png" alt="Foto de Juliano usando uma touca">
+            <img src="perfil.png" alt="Foto de Juliano usando uma touca">
         </main>
     <footer>
-        <p>asdasd</p>
     </footer>
 </body>
 </html>
