--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                 <h1 class="apresentacao__coteudo__titulo"><strong>HI THERE! I’M JULIANO</strong></h1>
                 <h2 class="apresentacao__coteudo__subtitulo"><span class="texto-destaque">CREATIVE</span> DEVELOPER</h2>
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
-                <a href="https://www.instagram.com/julianobaquico/">Instagram</a>
-                <a href="https://github.com/julianobaquico">Github</a>
+                <div class="apresentacao__links">
+                    <a  class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">Github</a>
+                </div>    
             </section>
             <img src="perfil.png" alt="Foto de Juliano usando uma touca">
         </main>
