--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h2 class="apresentacao__coteudo__subtitulo"><span class="texto-destaque">CREATIVE</span> DEVELOPER</h2>
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
                 <div class="apresentacao__links">
-                    <a  class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                    <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">Github</a>
+                    <a  class="apresentacao__links__link" href="https://www.instagram.com/julianobaquico/">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/julianobaquico">Github</a>
                 </div>    
             </section>
             <img src="perfil.png" alt="Foto de Juliano usando uma touca">
