--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
                 <h2 class="apresentacao__coteudo__subtitulo"><span class="texto-destaque">     CREATIVE</span> DEVELOPER</h2>
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
                 <div class="apresentacao__links">
-                    <a  class="apresentacao__links__link" href="https://www.instagram.com/julianobaquico/">Instagram</a>
-                    <a class="apresentacao__links__link" href="https://github.com/julianobaquico">Github</a>
+                    <!--<h2>Access my networks:</h2>-->
+                    <a class="apresentacao__links__link" href="https://github.com/julianobaquico">
+                        <img src="./assets/github.png">
+                        Github
+                    </a>    
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/julianobaquico/">
+                        <img src="./assets/linkedin.png">
+                        Linkedin
+                    </a>    
+                    <a class="apresentacao__links__link" href="https://www.instagram.com/julianobaquico/">
+                        <img src="./assets/instagram.png">
+                        Instagram
+                    </a>    
                 </div>    
             </section>
-            <img src="perfil.png" alt="Foto de Juliano usando uma touca">
+            <img src="./assets/new-perfil.jpg" alt="Foto de Juliano">
         </main>
     <footer>
     </footer>
