--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Portfolio</title>
 </head>  
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link">Home</a>
+            <a class="cabecalho__menu__link">About me</a>
+        </nav>
+    </header>
         <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__coteudo__titulo"><strong>HI THERE! I’M JULIANO</strong></h1>
                 <h2 class="apresentacao__coteudo__subtitulo"><span class="texto-destaque">     CREATIVE</span> DEVELOPER</h2>
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
                 <div class="apresentacao__links">
-                    <!--<h2>Access my networks:</h2>-->
+                    <h2>Access my networks:</h2>
                     <a class="apresentacao__links__link" href="https://github.com/julianobaquico">
                         <img src="./assets/github.png">
                         Github
@@ -32,7 +37,8 @@
             </section>
             <img src="./assets/new-perfil.jpg" alt="Foto de Juliano">
         </main>
-    <footer>
+    <footer class="rodape">
+        <p>Developed by Juliano Baquico</p>
     </footer>
 </body>
 </html>
