update-arrangement-elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2 class="apresentacao__coteudo__subtitulo"><span class="texto-destaque">     CREATIVE</span> DEVELOPER</h2>
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
                 <div class="apresentacao__links">
-                    <h2>Access my networks:</h2>
+                    <h2 class="apresentacao__links__link__subtitulo">Access my networks:</h2>
                     <a class="apresentacao__links__link" href="https://github.com/julianobaquico">
                         <img src="./assets/github.png">
                         Github
@@ -35,7 +35,7 @@
                     </a>    
                 </div>    
             </section>
-            <img src="./assets/new-perfil.jpg" alt="Foto de Juliano">
+            <img class="imagem" src="./assets/new-perfil.jpg" alt="Foto de Juliano">
         </main>
     <footer class="rodape">
         <p>Developed by Juliano Baquico</p>
