--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>    
                 </div>    
             </section>
-            <img class="imagem" src="./assets/new-perfil.jpg" alt="Foto de Juliano">
+            <img class="imagem" src="./assets/photo-juliano-border.png" alt="Foto de Juliano">
         </main>
     <footer class="rodape">
         <p>Developed by Juliano Baquico</p>
