--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <p class="apresentacao__coteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
             <p class="apresentacao__coteudo__texto">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
         </section>
-        <img src="./assets/new-perfil.jpg" alt="Foto de Juliano">
+        <img src="./assets/photo-juliano-border.png" alt="Foto de Juliano">
     </main>
     
     <footer class="rodape">
