--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                 <p class="apresentacao__coteudo__texto">I like to create solid projects focused on user experience.</p>
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__link__subtitulo">Access my networks:</h2>
-                    <a class="apresentacao__links__link" href="https://github.com/julianobaquico">
+                    <a class="apresentacao__links__link" href="https://github.com/julianobaquico" target="_blank">
                         <img src="./assets/github.png">
                         Github
                     </a>    
-                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/julianobaquico/">
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/julianobaquico/" target="_blank">
                         <img src="./assets/linkedin.png">
                         Linkedin
                     </a>    
-                    <a class="apresentacao__links__link" href="https://www.instagram.com/julianobaquico/">
+                    <a class="apresentacao__links__link" href="https://www.instagram.com/julianobaquico/" target="_blank">
                         <img src="./assets/instagram.png">
                         Instagram
                     </a>    
                 </div>    
             </section>
-            <img class="imagem" src="./assets/photo-juliano-border.png" alt="Foto de Juliano">
+            <img class="imagem" src="./assets/TEST.png" alt="Foto de Juliano">
         </main>
     <footer class="rodape">
         <p>Developed by Juliano Baquico</p>
